 <!-- Copyright (C) 2015 The Android Open Source Project

         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at

              http://www.apache.org/licenses/LICENSE-2.0

         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.
    -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<!-- Title for the application. [CHAR LIMIT=12] -->
<string name="app_name">CoffeeIt</string>


<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="name">Enter Name</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="toppings">Toppings</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="whipped_cream">Whipped cream</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="chocolate">Chocolate</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="quantity">Quantity</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
<string name="initial_quantity_value">2</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="order">Order</string>

<!--
   Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
   user's name. [CHAR LIMIT=NONE]
 -->
<string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>

<!--
   Whipped cream topping for the order summary. It will be shown in the format of
   "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
 -->
<string name="order_summary_whipped_cream">Add whipped cream <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

<!--
   Chocolate topping for the order summary. It will be shown in the format of
   "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
 -->
<string name="order_summary_chocolate">Add chocolate <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

<!--
   Quantity of coffee cups for the order summary. It will be shown in the format of
   "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
 -->
<string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

<!--
   Total price for the order summary. It will be shown in the format of
   "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
 -->
<string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>

<!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
<string name="thank_you">Thank you!</string>

<!--
   Subject line for the order summary email. It will be in the format of
   "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
 -->
<string name="order_summary_email_subject">Coffee order for <xliff:g example="Amy" id="name">%s</xliff:g></string>
<string name="title_activity_main2">cOffeee iT</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>

<string name="action_settings">Settings</string>
</resources>
